--- a/Nightshift Extension/github-dark.css
+++ b/Nightshift Extension/github-dark.css
@@ -3,12 +3,13 @@
   --bg-dark-color: rgb(30, 30, 30);
   --bg-light-color: rgb(50, 50, 50);
   --text-color: rgba(255, 255, 255, 0.78);
-  --muted-text-color: #72747c;
+  --muted-text-color: rgb(128, 128, 128);
   --text-green: rgb(110, 165, 100);
   --text-blue: rgb(102,153,204);
   --text-yellow: rgb(255, 204, 102);
   --text-red: #E7524B;
   --link-color: rgb(102,153,204);
+  --link-gray: rgb(150, 150, 150);
   --border-color: rgb(73, 73, 73);
   --inner-border-color: rgba(73, 73, 73, .5);
   --bg-code-color: rgb(47, 49, 52);
@@ -45,6 +46,10 @@
         border-color: var(--border-color) !important;
     }
     
+    .border-gray-dark {
+        border-color: var(--border-color) !important;
+    }
+    
     .bg-white {
         background-color: var(--bg-color) !important;
     }
@@ -52,7 +57,11 @@
     .bg-gray {
         background-color: var(--bg-color) !important;
     }
-    
+
+    .bg-red {
+        background-color: var(--text-red) !important;
+    }
+
     .bg-gray-light {
         background-color: var(--bg-light-color) !important;
     }
@@ -74,9 +83,13 @@
     }
     
     .link-gray {
-        color: var(--muted-text-color) !important;
+        color: var(--link-gray) !important;
     }
-    
+
+    .link-gray:hover {
+        color: var(--link-color) !important;
+    }
+
     .link-gray-dark {
         color: var(--text-color) !important;
     }
@@ -202,6 +215,10 @@
 
     .user-profile-nav {
         background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+    }
+    
+    .user-profile-sticky-bar:after {
         border-color: var(--border-color) !important;
     }
     
@@ -332,8 +349,8 @@
     }
     
     .discussion-item-icon {
-        border-color: var(--border-color) !important;
         background-color: var(--bg-light-color) !important;
+        border-color: var(--bg-color) !important;
         color: var(--text-color) !important;
     }
 
@@ -754,6 +771,219 @@
     
     .signed-commit-badge.verified:hover {
         border-color: var(--text-green) !important;
+    }
+    
+    /* Issues */
+    
+    .issues-reset-query {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .issues-reset-query:hover {
+        color: var(--link-color) !important;
+    }
+    
+    .open.octicon {
+        color: var(--text-green) !important;
+    }
+    
+    .closed.octicon, .reverted.octicon {
+        color: var(--text-red) !important;
+    }
+
+    /* Issue */
+    
+    .gh-header {
+        background-color: var(--bg-color) !important;
+    }
+
+    .gh-header-number {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .gh-header-meta {
+        border-color: var(--border-color) !important;
+        color: var(--muted-text-color) !important;
+    }
+    
+    .gh-header .gh-header-sticky.is-stuck+.gh-header-shadow {
+        background-color: var(--bg-dark-color) !important;
+        border-color: var(--border-color) !important;
+    }
+
+    .State--red {
+        background-color: var(--text-red) !important;
+    }
+    
+    .timeline-comment-header {
+        background-color: var(--bg-light-color) !important;
+        border-bottom-color: var(--inner-border-color) !important;
+        color: var(--muted-text-color) !important;
+    }
+    
+    .timeline-comment-header-text {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .timeline-comment {
+        background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+        color: var(--text-color) !important;
+    }
+    
+    .timeline-comment--caret:before {
+        border-right-color: var(--border-color) !important;
+    }
+    
+    .timeline-comment--caret:after {
+        border-right-color: var(--border-color) !important;
+    }
+    
+    .timeline-comment.current-user .timeline-comment-label {
+        border-color: var(--border-color) !important;
+    }
+    
+    .timeline-comment-action {
+        color: var(--link-gray) !important;
+    }
+    
+    .TimelineItem:before {
+        background-color: var(--border-color) !important;
+    }
+    
+    .TimelineItem-body {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .TimelineItem-break {
+        background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+    }
+    
+    .TimelineItem-badge {
+        background-color: var(--bg-light-color) !important;
+        border-color: var(--bg-color) !important;
+        color: var(--text-color) !important;
+    }
+    
+    .TimelineItem-badge.bg-red {
+        background-color: var(--text-red) !important;
+    }
+    
+    .discussion-sidebar-toggle:hover {
+        color: var(--link-color) !important;
+    }
+    
+    .discussion-sidebar-heading {
+        color: var(--link-gray) !important;
+    }
+
+    .discussion-sidebar-item {
+        color: var(--muted-text-color) !important;
+    }
+
+    .discussion-sidebar-item + .discussion-sidebar-item {
+        border-top-color: var(--inner-border-color) !important;
+    }
+    
+    .discussion-timeline-actions {
+        background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+    }
+    
+    .timeline-comment-wrapper {
+        border-color: var(--bg-color) !important;
+    }
+    
+    .timeline-new-comment .previewable-comment-form .comment-body {
+        border-color: var(--inner-border-color) !important;
+    }
+    
+    .drag-and-drop {
+        background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+        color: var--muted-text-color) !important;
+    }
+    
+    .page-responsive .previewable-comment-form .comment-form-head.tabnav {
+        background: var(--bg-light-color) !important;
+    }
+    
+    .tabnav-tab.selected,
+    .tabnav-tab[aria-current],
+    .tabnav-tab[aria-selected=true] {
+        background-color: var(--bg-color) !important;
+        border-color: var(--border-color) !important;
+        color: var(--text-color) !important;
+    }
+    
+    .tabnav-tab {
+        color: var(--muted-text-color) !important;
+    }
+
+    .tabnav-tab:focus,
+    .tabnav-tab:hover {
+        color: var(--text-color) !important;
+    }
+    
+    .toolbar-item,
+    .toolbar-item .menu-target {
+        color: var(--link-gray) !important;
+    }
+    
+    .select-menu-modal {
+        border-color: var(--border-color) !important;
+        color: var(--muted-text-color) !important;
+    }
+
+    .select-menu-filters {
+        background-color: var(--bg-color) !important;
+    }
+    
+    .select-menu-text-filter:first-child:last-child {
+        border-color: var(--border-color) !important;
+    }
+    
+    .select-menu-tabs {
+        border-color: var(--border-color) !important;
+    }
+    
+    .select-menu-tabs .select-menu-tab-nav, .select-menu-tabs a {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .select-menu-tabs .select-menu-tab-nav:hover, .select-menu-tabs a:hover {
+        color: var(--text-color) !important;
+    }
+    
+    .select-menu-tabs .select-menu-tab-nav.selected,
+    .select-menu-tabs .select-menu-tab-nav[aria-selected=true],
+    .select-menu-tabs a.selected,
+    .select-menu-tabs a[aria-selected=true] {
+        background-color: var(--bg-color) !important;
+        color: var(--text-color) !important;
+        border-color: var(--border-color) var(--border-color) var(--bg-color) !important;
+    }
+    
+    .select-menu-no-results {
+        color: var(--muted-text-color) !important;
+    }
+    
+    .select-menu-divider,
+    .select-menu-header .select-menu-title {
+        color: var(--text-color) !important;
+    }
+    
+    .select-menu-item-text .description {
+        color: var(--muted-text-color) !important;
+    }
+
+    .thread-subscription-status {
+        background-color: transparent !important;
+    }
+    
+    .reaction-summary-item {
+        border-color: var(--inner-border-color) !important;
     }
 
     /* Add new organization */
